Implement Weather API with Oracle integration and refactor WeatherForecast model

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "OracleDb": "User Id=weatheruser;Password=weatherpwd;Data Source=localhost:1521/FREEPDB1"
   }
 }
